[metadata]
name = cashman
version = 0.0.1
author = Jacobus Burger
author_email = therealjacoburger@gmail.com
description = A cli personal expenses tracker
long_description = file: README.md
url = https://github.com/LordUbuntu/cash-man
keywords =
  python
  expense tracker
  personal finance
  finance
  cli
license = MIT
classifiers =
  Development Status :: 1 - Planning
  License :: OSI Approved :: MIT License
  Programming Language :: Python :: 3.10
  Operating System :: OS Independent
  Topic :: Utilities
  Environment :: Console

[options]
packages = find:
python_requires = >=3.10
install_requires = 
  rich==13.3.4
  click==8.1.3

[options.entry_points]
console_scripts = 
  cashman = cashman.__main__:cashman

[options.extras_require]
dev =
  pytest>=7.2
  twine>=4.0.2

[build-system]
requires = [ "setuptools >= 59" ]
build-backend = "setuptools.build_meta"
